--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?765">
-	<link rel="stylesheet" type="text/css" href="style.css?4943">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?8122">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6519">
+	<link rel="stylesheet" type="text/css" href="style.css?5476">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?8451">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -36,31 +36,24 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse navbar-32585">
-						<ul class="site-navigation nav navbar-nav ml-auto my-menu">
+						<ul class="site-navigation nav navbar-nav ml-auto my-menu ">
 							<li class="nav-item">
-								<div class="dropdown btn-dropdown">
-									<a href="#" class="dropdown-toggle nav-link  ltc-white" data-toggle="dropdown" aria-expanded="false">Contents</a>
-									<ul class="dropdown-menu" role="menu">
-										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-white" data-scroll-speed="1000" onclick="scrollToTarget('#nav-engagement-ethics',this)">Ethics</a>
-										</li>
-										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-white" data-scroll-speed="1000" onclick="scrollToTarget('#bloc-29',this)">Data access map</a>
-										</li>
-										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-white" data-scroll-speed="1000" onclick="scrollToTarget('#bloc-38',this)">Data trusts</a>
-										</li>
-										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-white" data-scroll-speed="1000" onclick="scrollToTarget('#bloc-30',this)">Innovation</a>
-										</li>
-										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-white" data-scroll-speed="1000" onclick="scrollToTarget('#bloc-57',this)">Training</a>
-										</li>
-										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-white" data-scroll-speed="1000" onclick="scrollToTarget('#bloc-41',this)">Financials</a>
-										</li>
-									</ul>
-								</div>
+								<a href="index.html" class="nav-link">Ethics</a>
+							</li>
+							<li class="nav-item">
+								<a href="index.html" class="nav-link">Data access map</a>
+							</li>
+							<li class="nav-item">
+								<a href="index.html" class="nav-link">Data trusts</a>
+							</li>
+							<li class="nav-item">
+								<a href="index.html" class="nav-link">Innovation</a>
+							</li>
+							<li class="nav-item">
+								<a href="index.html" class="nav-link">Training</a>
+							</li>
+							<li class="nav-item">
+								<a href="index.html" class="nav-link">Financials</a>
 							</li>
 						</ul>
 					</div>
@@ -217,7 +210,7 @@
 	<div class="container ">
 		<div class="row voffset-clear-xs">
 			<div class="col-md-6 align-self-start col-lg-6 offset-lg-3">
-				<h1 class="mg-md navigation-header text-center margin-bottom tc-black ">
+				<h1 class="mg-md navigation-header text-center margin-bottom tc-black">
 					VIEW FROM THE CEO<br>Jeni Tennison
 				</h1>
 			</div>
@@ -1603,13 +1596,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?692"></script>
-<script src="./js/bootstrap.bundle.min.js?164"></script>
-<script src="./js/blocs.min.js?1477"></script>
+<script src="./js/jquery-3.3.1.min.js?1322"></script>
+<script src="./js/bootstrap.bundle.min.js?2266"></script>
+<script src="./js/blocs.min.js?6001"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?6587"></script>
-<script src="./js/textblock.min.js?807"></script>
-<script src="./js/textbloc-bric-js.js?3289"></script>
+<script src="./js/cocoen.min.js?7872"></script>
+<script src="./js/textblock.min.js?7691"></script>
+<script src="./js/textbloc-bric-js.js?3259"></script>
 <!-- Additional JS END -->
 
 
