--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.png?4075">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8048">
-	<link rel="stylesheet" type="text/css" href="style.css?7706">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?3593">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5623">
+	<link rel="stylesheet" type="text/css" href="style.css?3045">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?9030">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -81,7 +81,7 @@
 									<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Contents</a>
 									<ul class="dropdown-menu" role="menu">
 										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#bloc-7',this)">Ethics</a>
+											<a href="#" class="nav-link  ltc-black " data-scroll-speed="1000" onclick="scrollToTarget('#rsa-landscape',this)">Ethics</a>
 										</li>
 										<li class="nav-item">
 											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#data-access-map',this)">Data access map</a>
@@ -150,7 +150,7 @@
 <div class="bloc bgc-black d-bloc d-lg-none d-xl-none d-flex" id="bloc-3">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col align-self-start bloc-margin-top ">
+			<div class="col align-self-start bloc-margin-top">
 				<img src="img/lazyload-ph.png" data-src="img/ODI%202019%20AR%20Cover%20-%20Mobile%20dev01-01.svg" class="img-fluid mx-auto mg-lg d-lg-none d-xl-none d-block padding-imapct lazyload" alt="ODI%202019%20AR%20Cover%20 %20Mobile%20dev01-01" />
 				<h3 class="mg-md navigation-header-intro tc-white text-center margin-top">
 					OPEN DATA INSTITUTE
@@ -895,11 +895,6 @@
 <div class="bloc none   d-sm-none d-flex bgc-platinum tc-palatinate-blue l-bloc" id="bloc-32">
 	<div class="container bloc-sm">
 		<div class="row">
-			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-bottom">
-				<h1 class="mg-md navigation-header text-lg-center text-center tc-palatinate-blue-2">
-					Data trusts<br>
-				</h1>
-			</div>
 			<div class="col-12 margin-top col-lg-10 offset-lg-1">
 				<h1 class="mg-md h1-med-comp text-lg-left margin-bottom text-left tc-palatinate-blue-2">
 					“A data trust is a&nbsp;<span class="header-inline-block colour-text-black">legal structure</span>&nbsp;that provides independent stewardship of data”
@@ -1596,13 +1591,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?9404"></script>
-<script src="./js/bootstrap.bundle.min.js?434"></script>
-<script src="./js/blocs.min.js?5199"></script>
+<script src="./js/jquery-3.3.1.min.js?9444"></script>
+<script src="./js/bootstrap.bundle.min.js?6947"></script>
+<script src="./js/blocs.min.js?8136"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?9649"></script>
-<script src="./js/textblock.min.js?5779"></script>
-<script src="./js/textbloc-bric-js.js?100"></script>
+<script src="./js/cocoen.min.js?7381"></script>
+<script src="./js/textblock.min.js?2877"></script>
+<script src="./js/textbloc-bric-js.js?3627"></script>
 <!-- Additional JS END -->
 
 
