small text change to test netlify deploy from branch

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			</div>
 			<div class="offset-md-1 offset-sm-1 col-sm-10 align-self-center offset-lg-1 col-lg-4 col-md-10 offset-0 col-12">
 				<h2 class="tc-white btn-resize-mode d-block text-md-center text-sm-center mg-lg h1-med-comp margin-bottom text-left">
-					We found creative and practical ways to engage people in&nbsp;<span class="colour-text-green">data ethics and rights</span><br>
+					We found creative yet practical ways to engage people in&nbsp;<span class="colour-text-green">data ethics and rights</span><br>
 				</h2>
 			</div>
 			<div class="col-md-6 col-lg-3 align-self-center offset-lg-4 col-12">
