--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5104">
-	<link rel="stylesheet" type="text/css" href="style.css?2817">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?284">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9939">
+	<link rel="stylesheet" type="text/css" href="style.css?806">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?9028">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -227,7 +227,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h1 class="mg-md text-lg-center tc-white vision">
+				<h1 class="mg-md text-lg-center vision tc-black">
 					<strong>We want a world where data works for everyone</strong>
 				</h1>
 			</div>
@@ -320,7 +320,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h1 class="mg-md text-lg-center tc-white vision2">
+				<h1 class="mg-md text-lg-center vision2 tc-black">
 					<strong>We work with companies and governments to form an open, trustworthy data ecosystem</strong>
 				</h1>
 			</div>
@@ -365,17 +365,17 @@
 <!-- engagement-ethics-mob END -->
 
 <!-- rsa-desk -->
-<div class="bloc d-lg-flex   d-none svg-bg full-width-bloc bloc-fill-screen bgc-cotton-candy tc-white l-bloc" id="rsa-desk">
+<div class="bloc d-lg-flex   d-none svg-bg full-width-bloc bloc-fill-screen bgc-cotton-candy l-bloc tc-palatinate-blue" id="rsa-desk">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-lg-5">
 			</div>
 			<div class="col-md-6 align-self-center col-lg-5 offset-lg-1 margin-bottom">
-				<h1 class="mg-lg h1-med-comp tc-white margin-top">
-					In 2019 we found creative and practical ways to&nbsp;engage&nbsp;people in&nbsp;<span class="colour-text-green">data&nbsp;ethics and rights</span>
+				<h1 class="mg-lg h1-med-comp margin-top tc-palatinate-blue">
+					In 2019 we found creative and practical ways to&nbsp;engage&nbsp;people in&nbsp;<span class="colour-text-white">data&nbsp;ethics and rights</span>
 				</h1>
 				<p class="mg-clear p-3-style- d-block" id="detail-rsa">
-					In 2019 we wanted to get a better understanding of how much people knew about how personal was being accessed, used and shared – and how they felt about it. <br><br>We partnered with the&nbsp;<span class="colour-text-green span-bold">RSA</span>&nbsp;and&nbsp;<span class="colour-text-green span-bold">Luminate</span>&nbsp;to run focus groups and workshops exploring people&rsquo;s understanding of data about us. In the course of our research, we found those we spoke to knew and cared more than people are given credit for, and wanted greater agency, rights and protection over their digital lives. <br><br>We published a&nbsp;report:&nbsp;<a class="link-style ltc-dark-pastel-green" href="https://www.thersa.org/globalassets/pdfs/reports/data-about-us-final-report.pdf" target="_blank">About Data About Us</a>, and a&nbsp;<a class="ltc-dark-pastel-green link-style" href="https://theodi.org/article/data-about-us-the-people-know-and-care-more-than-they-are-given-credit-for/" target="_blank">short animation</a>&nbsp;which brings to life some of the perspectives we heard. The project was&nbsp;featured in&nbsp;<a class="link-style ltc-dark-pastel-green" href="https://www.smartcitiesworld.net/news/news/people-want-to-know-the-why-how-when-and-what-of-data-use-4593" target="_blank">SmartCitiesWorld</a>&nbsp;and was shared widely through social media.<br>
+					In 2019 we wanted to get a better understanding of how much people knew about how personal was being accessed, used and shared – and how they felt about it. <br><br>We partnered with the&nbsp;<span class="span-bold colour-text-white">RSA</span>&nbsp;and&nbsp;<span class="span-bold colour-text-white">Luminate</span>&nbsp;to run focus groups and workshops exploring people&rsquo;s understanding of data about us. In the course of our research, we found those we spoke to knew and cared more than people are given credit for, and wanted greater agency, rights and protection over their digital lives. <br><br>We published a&nbsp;report:&nbsp;<a class="link-style ltc-white" href="https://www.thersa.org/globalassets/pdfs/reports/data-about-us-final-report.pdf" target="_blank">About Data About Us</a>, and a&nbsp;<a class="link-style ltc-white" href="https://theodi.org/article/data-about-us-the-people-know-and-care-more-than-they-are-given-credit-for/" target="_blank">short animation</a>&nbsp;which brings to life some of the perspectives we heard. The project was&nbsp;featured in&nbsp;<a class="link-style ltc-white" href="https://www.smartcitiesworld.net/news/news/people-want-to-know-the-why-how-when-and-what-of-data-use-4593" target="_blank">SmartCitiesWorld</a>&nbsp;and was shared widely through social media.<br>
 				</p>
 			</div>
 		</div>
@@ -388,7 +388,7 @@
 	<div class="container bloc-sm">
 		<div class="row header-explore-margin">
 			<div class="col align-self-end">
-				<h1 class="mg-md h1-8-style tc-oxford-blue text-lg-left text-center d-lg-block   d-none">
+				<h1 class="mg-md h1-8-style tc-st-patricks-blue text-lg-left text-center d-lg-block   d-none">
 					<strong>People have told us they want greater…</strong>
 				</h1>
 			</div>
@@ -413,7 +413,7 @@
 	<div class="container bloc-sm">
 		<div class="row header-explore-margin">
 			<div class="col align-self-end">
-				<h1 class="mg-md h1-8-style tc-oxford-blue text-center d-lg-block   d-none text-lg-right">
+				<h1 class="mg-md h1-8-style tc-st-patricks-blue text-center d-lg-block   d-none text-lg-right">
 					<strong>…over how data about them is used</strong>
 				</h1>
 			</div>
@@ -427,7 +427,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col align-self-end">
-				<h1 class="mg-md h1-8-style tc-oxford-blue text-lg-left text-center d-lg-none d-xl-none d-block">
+				<h1 class="mg-md h1-8-style tc-st-patricks-blue text-lg-left text-center d-lg-none d-xl-none d-block">
 					<strong>People have told us they want greater…</strong>
 				</h1>
 			</div>
@@ -452,7 +452,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col align-self-end header-explore-margin">
-				<h1 class="mg-md h1-8-style tc-oxford-blue text-lg-right text-center d-lg-none d-xl-none d-block">
+				<h1 class="mg-md h1-8-style tc-st-patricks-blue text-lg-right text-center d-lg-none d-xl-none d-block">
 					<strong>…over how data about them is used</strong>
 				</h1>
 			</div>
@@ -1169,7 +1169,7 @@
 <!-- bloc-47 END -->
 
 <!-- bloc-48 -->
-<div class="bloc none full-width-bloc bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bg-double-image-RandD l-bloc" id="bloc-48">
+<div class="bloc none full-width-bloc bloc-fill-screen bloc-tile-2 d-lg-flex   d-none randd-bg l-bloc" id="bloc-48">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -1449,7 +1449,7 @@
 <div class="bloc bgc-isabelline l-bloc" id="openactive-mob-stats">
 	<div class="container bloc-lg">
 		<div class="row stat-margin">
-			<div class="divider-right stat-title- divider-right-green offset-md-3 col-md-6">
+			<div class="divider-right stat-title- divider-right-green offset-md-3 col-md-6 col-lg-4 offset-lg-0">
 				<h1 class="mg-md stat-header text-center tc-dark-pastel-green">
 					over 3 years Open Active has reached:
 				</h1>
@@ -1503,19 +1503,19 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-bottom">
-				<h1 class="mg-md navigation-header text-lg-center tc-bright-turquoise text-center">
+				<h1 class="mg-md navigation-header text-lg-center text-center tc-white">
 					Data Pitch
 				</h1>
 			</div>
 			<div class="col-12 align-self-start col-lg-10 offset-lg-1">
 				<img src="img/lazyload-ph.png" data-src="img/Data%20pitch%20logo%20white%20portrait.svg" class="img-fluid mx-auto d-block img-bloc-23-style mg-lg lazyload" alt="Data%20Pitch%20logo%20RGB" />
 				<p class="mg-clear p-3-style-">
-					One of our most impactful programmes&nbsp;<span class="colour-text-sky-blue"><strong>championing data sharing</strong></span>&nbsp;in the private sector is Data Pitch, which, after three exciting years, drew to a close in 2019. <br><br>Data Pitch&nbsp;<span class="colour-text-sky-blue"><strong>helped businesses create value</strong></span>&nbsp;and take advantage of data-based solutions by&nbsp;<span class="colour-text-sky-blue"><strong>linking up startups and entrepreneurs</strong></span>&nbsp;– who have the initiative and ideas to create solutions – with large data-holding organisations with data-related challenges to be solved.&nbsp;<br>
+					One of our most impactful programmes&nbsp;<span class="colour-text-grey"><strong>championing data sharing</strong></span>&nbsp;in the private sector is Data Pitch, which, after three exciting years, drew to a close in 2019. <br><br>Data Pitch&nbsp;<span class="colour-text-grey"><strong>helped businesses create value</strong></span>&nbsp;and take advantage of data-based solutions by&nbsp;<span class="colour-text-grey"><strong>linking up startups and entrepreneurs</strong></span>&nbsp;– who have the initiative and ideas to create solutions – with large data-holding organisations with data-related challenges to be solved.&nbsp;<br>
 				</p>
 			</div>
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-top">
-				<h1 class="mg-md navigation-header text-lg-center tc-bright-turquoise text-center">
-					<a class="ltc-bright-turquoise link-style link-style-explore" href="https://datapitch.eu/" target="_blank">Explore</a><br>
+				<h1 class="mg-md navigation-header text-lg-center text-center tc-white">
+					<a class="link-style link-style-explore ltc-white" href="https://datapitch.eu/" target="_blank">Explore</a><br>
 				</h1>
 			</div>
 		</div>
@@ -1582,7 +1582,7 @@
 <div class="bloc bgc-isabelline l-bloc" id="datapitch-mob-stats">
 	<div class="container bloc-lg">
 		<div class="row stat-margin">
-			<div class="stat-title- divider-right-purple col-md-6 offset-md-3">
+			<div class="stat-title- divider-right-purple col-md-6 offset-md-3 col-lg-4 offset-lg-0">
 				<h1 class="mg-md stat-header text-center tc-purple-heart text-lg-left">
 					By 2019 Data Pitch had achieved:
 				</h1>
@@ -1683,25 +1683,25 @@
 <div class="bloc-group">
 
 <!-- bloc-107 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bgc-palatinate-blue tc-white d-bloc" id="bloc-107">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bgc-palatinate-blue tc-black d-bloc" id="bloc-107">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-bottom">
-				<h1 class="mg-md navigation-header text-lg-center text-center tc-white">
+				<h1 class="mg-md navigation-header text-lg-center text-center tc-black">
 					<span>Private sector</span><br>
 				</h1>
 			</div>
 			<div class="col-12 margin-top col-lg-10 offset-lg-1">
-				<h1 class="mg-md margin-bottom h1-med-comp text-center text-lg-left tc-white">
-					We partnered with companies&nbsp;<span class="span-bold colour-text-black">transforming how they work</span>&nbsp;with data<br>
+				<h1 class="mg-md margin-bottom h1-med-comp text-center text-lg-left tc-black">
+					We partnered with companies&nbsp;<span class="span-bold colour-text-grey">transforming how they work</span>&nbsp;with data<br>
 				</h1>
 				<p class="mg-clear p-3-style- margin-bottom">
-					We worked with a range of private-sector organisations to help them&nbsp;<span class="span-bold colour-text-black">make better use of data</span>&nbsp;across sectors such as&nbsp;<span class="span-bold colour-text-black">finance,</span>&nbsp;&nbsp;<span class="span-bold colour-text-black">retail</span>&nbsp;and the&nbsp;<span class="span-bold colour-text-black">built environment.</span><br><br>The ODI Commercial Partnership programme enables us to connect organisations across different sectors, who share a&nbsp;<span class="span-bold colour-text-black">common vision of a collaborative and open future</span>.<br>
+					We worked with a range of private-sector organisations to help them&nbsp;<span class="span-bold colour-text-grey">make better use of data</span>&nbsp;across sectors such as&nbsp;<span class="span-bold colour-text-black">finance,</span>&nbsp;&nbsp;<span class="span-bold colour-text-black">retail</span>&nbsp;and the&nbsp;<span class="span-bold colour-text-grey">built environment.</span><br><br>The ODI Commercial Partnership programme enables us to connect organisations across different sectors, who share a&nbsp;<span class="span-bold colour-text-grey">common vision of a collaborative and open future</span>.<br>
 				</p>
 			</div>
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-top">
-				<h1 class="mg-md navigation-header text-lg-center text-center tc-white">
-					<a class="link-style-explore ltc-white" href="https://theodi.org/service/business-data-sharing/" target="_blank">Explore</a><br>
+				<h1 class="mg-md navigation-header text-lg-center text-center tc-black">
+					<a class="link-style-explore ltc-black" href="https://theodi.org/service/business-data-sharing/" target="_blank">Explore</a><br>
 				</h1>
 			</div>
 		</div>
@@ -2716,7 +2716,7 @@
 <!-- bloc-113 END -->
 
 <!-- bloc-114 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none l-bloc dac-intro-bg" id="bloc-114">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none dac-intro-bg l-bloc" id="bloc-114">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -2772,7 +2772,7 @@
 <div class="bloc-group d-lg-flex blocs-hidden-md blocs-hidden-sm d-none">
 
 <!-- bloc-117 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none dac-bg b-parallax bgc-royal-purple l-bloc tc-purple-heart" id="bloc-117">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none dac-bg b-parallax bgc-royal-purple tc-purple-heart l-bloc" id="bloc-117">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-lg-10 offset-lg-1">
@@ -2792,7 +2792,7 @@
 <!-- bloc-117 END -->
 
 <!-- bloc-118 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none l-bloc mood-pinball-bg" id="bloc-118">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none mood-pinball-bg l-bloc" id="bloc-118">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -2810,7 +2810,7 @@
 <div class="bloc-group d-lg-flex blocs-hidden-md blocs-hidden-sm d-none">
 
 <!-- bloc-119 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none b-parallax bgc-black d-bloc dac-bg-grey tc-white" id="bloc-119">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none b-parallax bgc-black dac-bg-grey tc-white d-bloc" id="bloc-119">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-lg-10 offset-lg-1">
@@ -2830,7 +2830,7 @@
 <!-- bloc-119 END -->
 
 <!-- bloc-120 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none l-bloc mr-gee-bg" id="bloc-120">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none mr-gee-bg l-bloc" id="bloc-120">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -2861,7 +2861,7 @@
 	<div class="container ">
 		<div class="row voffset-clear-xs no-gutters">
 			<div class="col-12">
-				<div id="carousel-39485" class="carousel slide" data-ride="carousel">
+				<div id="carousel-39485" class="carousel slide " data-ride="carousel">
 					<ol class="carousel-indicators">
 						<li data-target="#carousel-39485" data-slide-to="0" class="active">
 						</li>
@@ -2889,7 +2889,7 @@
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img class="d-inline-block w-100" alt="placeholder image-wide" src="img/placeholder-image-wide.png" />
+							<img class="d-inline-block w-100" alt="placeholder image-wide" src="img/mood-pinball-summit.jpg" />
 							<div class="carousel-caption">
 							</div>
 						</div>
@@ -3253,7 +3253,7 @@
 <!-- financials-mob END -->
 
 <!-- bloc-137 -->
-<div class="bloc manifesto-bg l-bloc tc-black" id="bloc-137">
+<div class="bloc manifesto-bg tc-black l-bloc" id="bloc-137">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="offset-lg-0 offset-md-0 col-lg-12 bloc-margin-bottom col-md-12">
@@ -3320,7 +3320,7 @@
 <!-- bloc-137 END -->
 
 <!-- bloc-72 -->
-<div class="bloc bloc-fill-screen bgc-bright-pink d-bloc " id="bloc-72">
+<div class="bloc bloc-fill-screen bgc-bright-pink d-bloc" id="bloc-72">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -3336,13 +3336,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?7299"></script>
-<script src="./js/bootstrap.bundle.min.js?5430"></script>
-<script src="./js/blocs.min.js?1195"></script>
+<script src="./js/jquery-3.3.1.min.js?7572"></script>
+<script src="./js/bootstrap.bundle.min.js?1166"></script>
+<script src="./js/blocs.min.js?5424"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?6213"></script>
-<script src="./js/textblock.min.js?9565"></script>
-<script src="./js/textbloc-bric-js.js?3134"></script>
+<script src="./js/cocoen.min.js?5469"></script>
+<script src="./js/textblock.min.js?1727"></script>
+<script src="./js/textbloc-bric-js.js?1014"></script>
 <!-- Additional JS END -->
 
 
